# raster_algebra_comparison

./: README.md  benchmark.sh  landsat.vrt
otb_time_average/: CMakeLists.txt  TimeAverageUtils.h  appFunctorTimeAverage.cxx  appTimeAverage.cxx  exeFunctorTimeAverage.cxx
